classDiagram
    class Task {
        +str description
        +int duration_minutes
        +str priority
        +str frequency
        +str scheduled_time
        +bool completed
        +str pet_name
        +mark_complete()
        +mark_incomplete()
        +end_time() str
        +schedule(start_time: str)
    }

    class Pet {
        +str name
        +str species
        +int age
        +str breed
        +List~Task~ tasks
        +add_task(task: Task)
        +remove_task(description: str)
        +get_tasks() List~Task~
    }

    class Owner {
        +str name
        +List~Pet~ pets
        +int available_minutes
        +str preferred_start_time
        +str priority_preference
        +add_pet(pet: Pet)
        +remove_pet(name: str)
        +get_pets() List~Pet~
        +get_all_tasks() List~Task~
    }

    class Scheduler {
        +str date
        +List~Task~ scheduled_tasks
        +List~Task~ skipped_tasks
        +int total_minutes_used
        +generate(owner: Owner)
        +explain() str
        +get_schedule() List~Task~
    }

    Owner "1" *-- "0..*" Pet : manages
    Pet "1" *-- "0..*" Task : has
    Scheduler --> Owner : uses
